<resources>
    <string name="app_name">CleanArch</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_button_description">Go back</string>
    <string name="task_hint">Enter task</string>
    <string name="time_hint">00:00</string>
    <string name="add_image_description">Add or change image</string>
    <string name="add_task_description">Add task</string>
    <string name="add_photo_description">Add or change photo</string>
    <string name="save_changes_description">Save changes</string>
    <string name="task_list_title">Task List</string>
</resources>