<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/transparent"
        android:src="@drawable/baseline_arrow_back"
        android:contentDescription="@string/back_button_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/tv_task"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/task_hint"
            android:drawableStart="@drawable/baseline_task"
            android:drawablePadding="8dp"
            android:padding="8dp"
            android:backgroundTint="@color/black"
            android:inputType="text"
            android:textColorHint="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:hint="@string/time_hint"
            android:drawableStart="@drawable/baseline_access"
            android:drawablePadding="8dp"
            android:padding="8dp"
            android:backgroundTint="@color/black"
            android:inputType="time"
            android:textColorHint="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/change_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:src="@drawable/baseline_add_image"
        android:contentDescription="@string/add_image_description" />

    <ImageButton
        android:id="@+id/btn_add_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:backgroundTint="@android:color/transparent"
        android:src="@drawable/baseline_add"
        android:contentDescription="@string/add_task_description" />
</LinearLayout>
